download + save buttons

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: system-ui, sans-serif;
+    font-family:'Courier New', Courier, monospace
 }
 
 body {
